--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,139 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tools import *\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
-    "import numpy as np\n"
+    "from tools.db_tools import *\n",
+    "from tools.data_tools import *\n",
+    "from tools.model_tools import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X,y = fetch_training()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>Set</th>\n",
-       "      <th>Test</th>\n",
-       "      <th>Train</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Month</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <td>January</td>\n",
-       "      <td>-6.326581</td>\n",
-       "      <td>-12.277109</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>February</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-10.680107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>March</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-12.007930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>April</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-10.426505</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>May</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-7.658699</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>June</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-6.648209</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>July</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-6.498501</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>August</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-5.665337</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>September</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-13.849467</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>October</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-10.944401</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>November</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-11.011253</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>December</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-8.967742</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Set            Test      Train\n",
-       "Month                         \n",
-       "January   -6.326581 -12.277109\n",
-       "February        NaN -10.680107\n",
-       "March           NaN -12.007930\n",
-       "April           NaN -10.426505\n",
-       "May             NaN  -7.658699\n",
-       "June            NaN  -6.648209\n",
-       "July            NaN  -6.498501\n",
-       "August          NaN  -5.665337\n",
-       "September       NaN -13.849467\n",
-       "October         NaN -10.944401\n",
-       "November        NaN -11.011253\n",
-       "December        NaN  -8.967742"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/demetri/miniconda3/envs/gymbo/lib/python3.6/site-packages/sklearn/base.py:306: UserWarning: Trying to unpickle estimator OrdinalEncoder from version 0.22.1 when using version 0.21.3. This might lead to breaking code or invalid results. Use at your own risk.\n",
+      "  UserWarning)\n",
+      "/Users/demetri/miniconda3/envs/gymbo/lib/python3.6/site-packages/sklearn/base.py:306: UserWarning: Trying to unpickle estimator ColumnTransformer from version 0.22.1 when using version 0.21.3. This might lead to breaking code or invalid results. Use at your own risk.\n",
+      "  UserWarning)\n"
+     ]
+    },
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sklearn.preprocessing._data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-44c620d5c27a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Documents/GitHub/gymbo/tools/model_tools.py\u001b[0m in \u001b[0;36mload_model\u001b[0;34m()\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     56\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'model.txt'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 57\u001b[0;31m         \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     58\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn.preprocessing._data'"
+     ]
     }
    ],
    "source": [
-    "compare_scores()"
+    "model = load_model()\n"
    ]
   },
   {
@@ -161,9 +78,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
